<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    tools:context=".Fragments.DetailsFragment">

    <ImageView
        android:id="@+id/detailsFgLeftIcon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailsFgRightIcon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/arrow_rigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detailsFgViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="Galería de imágenes"
        app:layout_constraintBottom_toTopOf="@+id/detailsFgCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.viewpager2.widget.ViewPager2>

    <androidx.cardview.widget.CardView
        android:id="@+id/detailsFgCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsFgViewPager"
        app:layout_constraintVertical_bias="5.9">

        <View
            android:id="@+id/detailsFgDecorativeLine"
            android:layout_width="55dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:padding="0dp">

                <TextView
                    android:id="@+id/detailsFgTextViewNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailsFgTextViewEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="78dp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingTop="10dp"
                    android:text="@string/old"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="Icono de ubicación"
                    android:src="@drawable/location"
                    app:layout_constraintEnd_toStartOf="@+id/detailsFgTextViewLocalization"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailsFgTextViewLocalization"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/localization"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="60dp"
                    android:layout_margin="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsFgTextViewSex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="xxx"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/sex"
                            android:textSize="10sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailsFgTextVieWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="xxx"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/peso"
                            android:textSize="10sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person" />

                <LinearLayout
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="left|start"
                        android:text="@string/owner"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/detailsFgTextVieNameOwner"
                        android:layout_width="277dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="left|start"
                        android:text="Nombre del dueño"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/detailsFgPhoneImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phone" />
            </LinearLayout>

            <TextView
                android:id="@+id/detailsFgTextVieText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/button3"
        android:layout_width="359dp"
        android:layout_height="64dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/btn_adopt"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="84dp"
        android:layout_height="96dp"
        android:layout_marginStart="628dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="49dp"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/detailsFgRightIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
